{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 52,
  "lineage": "bd2f20fd-c013-e968-1ba7-b6e78241cc16",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "medical_vault_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-022d1e67966528d85",
            "arn": "arn:aws:ec2:ap-southeast-1:990403208942:elastic-ip/eipalloc-022d1e67966528d85",
            "association_id": "eipassoc-069d98d99262a6ddc",
            "domain": "vpc",
            "id": "eipalloc-022d1e67966528d85",
            "instance": "i-03992c29f04547b14",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-04342d372aa987d92",
            "private_dns": "ip-10-0-1-5.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.5",
            "public_dns": "ec2-3-0-207-181.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "3.0.207.181",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "medical-vault-eip"
            },
            "tags_all": {
              "Name": "medical-vault-eip"
            }
          },
          "dependencies": [
            "aws_instance.medical_vault_ec2",
            "aws_security_group.ec2_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.medical_vault_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "medical_vault_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05edef9230865e65c",
            "arn": "arn:aws:ec2:ap-southeast-1:990403208942:instance/i-03992c29f04547b14",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": true
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03992c29f04547b14",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "medical-vault-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04342d372aa987d92"
              }
            ],
            "primary_network_interface_id": "eni-04342d372aa987d92",
            "private_dns": "ip-10-0-1-5.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.5",
            "public_dns": "ec2-3-0-207-181.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "3.0.207.181",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07b74d77840713963",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-081fea86cd7387f72",
            "tags": {
              "Name": "medical-vault-ec2"
            },
            "tags_all": {
              "Name": "medical-vault-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0476387daae20af07"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.medical_vault_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:990403208942:internet-gateway/igw-0ecc3fc238bd0394b",
            "id": "igw-0ecc3fc238bd0394b",
            "owner_id": "990403208942",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "medical-vault-igw"
            },
            "tags_all": {
              "Name": "medical-vault-igw"
            },
            "vpc_id": "vpc-0a267c8996d338b95"
          },
          "dependencies": [
            "aws_vpc.medical_vault_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:990403208942:route-table/rtb-0a08300ba4769f011",
            "id": "rtb-0a08300ba4769f011",
            "owner_id": "990403208942",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ecc3fc238bd0394b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "medical-vault-public-rt"
            },
            "tags_all": {
              "Name": "medical-vault-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a267c8996d338b95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.medical_vault_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9289179a7b3bbce",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0a08300ba4769f011",
            "subnet_id": "subnet-081fea86cd7387f72"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.medical_vault_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:990403208942:security-group/sg-0476387daae20af07",
            "description": "Security group for EC2 instance with Nitro Enclaves",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              }
            ],
            "id": "sg-0476387daae20af07",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8101,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8101
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8102,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8102
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8103,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8103
              }
            ],
            "name": "medical-vault-ec2-sg",
            "name_prefix": "",
            "owner_id": "990403208942",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "medical-vault-ec2-sg"
            },
            "tags_all": {
              "Name": "medical-vault-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a267c8996d338b95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.medical_vault_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:990403208942:subnet/subnet-081fea86cd7387f72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081fea86cd7387f72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "990403208942",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "medical-vault-public"
            },
            "tags_all": {
              "Name": "medical-vault-public"
            },
            "vpc_id": "vpc-0a267c8996d338b95"
          },
          "dependencies": [
            "aws_vpc.medical_vault_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "medical_vault_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:990403208942:vpc/vpc-0a267c8996d338b95",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-067b9837f93b3956a",
            "default_route_table_id": "rtb-0bfdf29c85e8656c8",
            "default_security_group_id": "sg-0975929d88af04d4e",
            "dhcp_options_id": "dopt-092370a5ec6ed99cd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a267c8996d338b95",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bfdf29c85e8656c8",
            "owner_id": "990403208942",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "medical-vault-vpc"
            },
            "tags_all": {
              "Name": "medical-vault-vpc"
            }
          }
        }
      ]
    }
  ]
}